--- a/includes/disabledheader.html
+++ b/includes/disabledheader.html
@@ -72,14 +72,14 @@
 						<li class="nav-item"><a id="contact" class="nav-link" href="#">Contact</a></li>
 
 					</ul> -->
-					<button class="headerbutton" onclick="window.location='/';">Home</button>
+					<button class="headerbutton" onclick="window.location='/';" disabled>Home</button>
 					<!-- <div class="dropdown" style="">
  						<button class="dropbtn">Movie List</button>
   						<div class="dropdown-content">
     						<a href="/movies/bella">Bella</a>
     					</div>
   					</div> -->
-  					<button class="headerbutton" onclick="window.location='https://www.lifeisaardvark.tk';" style="margin-left:302px;">LIA Home</button>
+  					<button class="headerbutton" onclick="window.location='https://www.lifeisaardvark.tk';" style="margin-left:302px;" disabled>LIA Home</button>
 				</nav>
 			</div>
 		</div>
