--- a/includes/header.html
+++ b/includes/header.html
@@ -73,6 +73,7 @@
 
 					</ul> -->
 					<button class="headerbutton" onclick="window.location='/';">Home</button>
+					<button class="headerbutton" onclick="window.location='/addons.html';">Addons</button>
 					<!-- <div class="dropdown" style="">
  						<button class="dropbtn">Movie List</button>
   						<div class="dropdown-content">
